# oetoolchain-cmake-preset-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml
.github/workflows/: python-app.yml
src/oetoolchain_cmake_preset_generator/: main.py
tests/: oetoolchain_cmake_preset_generator_test.py
