[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "oetoolchain-cmake-preset-generator"
description = "Generate CMake preset from OpenEmbedded / Yocto toolchain"
authors = [
    { name="Martin Engelmann", email="murphi@posteo.de"}
    ]
dynamic = ["version"]
requires-python = ">= 3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [ "LICENSE" ]

[project.scripts]
oetoolchain-cmake-preset-generator = "oetoolchain_cmake_preset_generator.main:main"


[tool.hatch.version]
path = "src/oetoolchain_cmake_preset_generator/main.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
